# AI

./: .gcloudignore  .gitignore  AGENTS.md  Dockerfile  README.md  REST_API.md  cloudbuild.yaml  config.py  enviorment.yml  install.ipynb  langgraph.json  main.ipynb  main.py  main1.py  project_prd.md  pyproject.toml  render.yaml  run_local.py  setup.txt
.github/workflows/: render-keepalive.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_ops.pckl
.windsurf/rules/: job-serach.md
api/: main.py
data/: url_llm_data.json
data/eval/: ground_truth.json  job_data_40.json
data/retrieval/: ground_truth.json
data/url_exchager/: synonym_dict.json  url_llm_data.json
docs/: api_usage_examples.md
eval/crawl/: crawl_kpi_eval.py
eval/e2e/: e2e_ops_eval.py
eval/final_llm/: final_llm_eval.py
eval/ner/: openai_slot_eval.py  openai_slot_eval_analysis.md  openai_slot_eval_result.md
eval/retrieval/: retrieval_eval.py
legacy/: README.md
legacy/api/: config.py  main.py
prd/: FAISS_Retriever_PRD.md  retrieval_generate-tasks.md  retrieval_prd.md
problem_md/: gcp-504-timeout.md  trigger-inline-config.md
report/: performance_improvement_report.md  retrieval_analysis_report.md
reports/: frontend_api_integration_report.md
src/: __init__.py  graph.py  node.py  router.py
src/api/: job_search_api.py
src/crawling/: __init__.py  html_info_extractor.py  job_crawler.py  node.py
src/data/: job_data_collector.py
src/embedding/: __init__.py  model.py  node.py
src/llm/: generator.ipynb  generator.py  job_summarizer_functions.py  query_map.json  url_exchanger.py
src/parsing/: applicant_stats.py  benefit.py  company_info.py  howto.py  job_detail.py  location.py  main.py  summary.py
src/retrieval/: __init__.py  hybrid_retriever.py  test_hybrid_retrieval.py
tests/: test_api.py
(+90 files in other folders)
